# whales-identification

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COMMIT_MESSAGE.md  Dockerfile  FIXES_REPORT.md  HOMEWORK_COMPLETION_REPORT.md  HOMEWORK_MONITORING_DEMONSTRATION.md  MERGE_REQUEST.md  MONITORING_URLS_GUIDE.md  Makefile  PROBLEM_SOLUTION_REPORT.md  QUICK_START.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py
.github/: label.yml  labeler.yml
.github/workflows/: docker-image.yml  greetings.yml  label.yml
comparison_research/: comparison_detection_algo.py  research_yolo.py
data/: backfin_annotations.csv
data/datasets/: data.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  api.test.ts
integrations/: coordinates_api.py
monitoring/: alerting-rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana-dashboards/: whales-models-dashboard.json
monitoring/grafana-datasources/: prometheus.yml
research/demo-ui/: README.md  clean_test.py  inference_transformers.py  streamlit_app.py
research/demo-ui-mask/: README.md  get_best_five.py  inference.py  inference_resnet.py  requirements.txt  streamlit_app.py
research/demo-ui-mask/models/: EfficientNet.h5  resnet101.pth  vgg19_075.pth
research/notebooks/: 02_ViT_inference_efficientnet.ipynb  02_ViT_train_effiecientnet.ipynb  03_efficientnet_experiments.ipynb  04_resnet_classification_experiments.ipynb  05_swinT_experiments.ipynb  06_benchmark.ipynb  06_benchmark_binary.ipynb  06_benchmark_multiclass.ipynb  07_onnx_inference_compare.ipynb  08_benchmark_all_compare.ipynb  08_benchmark_all_imagenet.ipynb  09_augmentation_example.ipynb  10_remove_bg_example.ipynb  11_data_stram_cv_video.ipynb  README.md  fin_model.ipynb  new_inference.ipynb
research/src/: inference_transformers.py  streamlit_app.py
scripts/: benchmark_models.py  download_models.sh  test_alerts.py
telegram-notifier/: Dockerfile  main.py
whales_be_service/: Dockerfile  README.md  pyproject.toml  requirements.txt
whales_be_service/src/whales_be_service/: config.py  config.yaml  main.py  models.py  response_models.py
whales_be_service/tests/api/: test_post_endpoints.py
whales_identify/: config.py  dataset.py  filter_processor.py  model.py  remove_bg.py  train.py  utils.py
