[project]
name = "whales-be-service"
version = "0.1.0"
description = "API service for whale identification"
authors = [
    {name = "Tarasov Artyom",email = "almtara550@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
name = "whales-be-service"
version = "0.1.0"
description = "API service for whale identification"
authors = ["Tarasov Artyom"]
packages = [{include = "whales_be_service", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
